--- a/generic-dao/pom.xml
+++ b/generic-dao/pom.xml
@@ -4,9 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <artifactId>generic-dao</artifactId>
     <packaging>jar</packaging>
-
-    <artifactId>effective-java</artifactId>
 
     <parent>
         <groupId>ir.mtyn.learning</groupId>
@@ -16,22 +15,4 @@
     </parent>
 
 
-    <dependencies>
-        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>${mysql.version}</version>
-        </dependency>
-
-<!--
-        <dependency>
-            <groupId>ir.learning.shooter</groupId>
-            <artifactId>learning-shooter</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
--->
-
-    </dependencies>
-    
 </project>
